--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       color: #333;
     }
 
+    /* ログイン部分 */
     #login {
       text-align: center;
       margin-top: 50px;
@@ -30,11 +31,25 @@
     }
 
     #login button {
-      padding: 5px 10px;
-      font-size: 16px;
+      padding: 12px 28px;
+      font-size: 18px;
+      font-weight: bold;
       cursor: pointer;
+      background: linear-gradient(45deg, #2196f3, #1976d2); /* ブルー系 */
+      color: white;
+      border: none;
+      border-radius: 25px;
+      box-shadow: 0 3px 6px rgba(0,0,0,0.25);
+      transition: 0.3s;
     }
 
+    #login button:hover {
+      transform: scale(1.05);
+      background: linear-gradient(45deg, #42a5f5, #1565c0); /* ホバー時明るめ */
+      box-shadow: 0 5px 10px rgba(0,0,0,0.35);
+    }
+
+    /* BGMボタン */
     .grid {
       display: none; /* 最初は非表示 */
       grid-template-columns: repeat(4, 1fr); /* 横4列 */
@@ -45,7 +60,7 @@
       padding: 10px;
     }
 
-    button {
+    button.bgm {
       width: 100%;
       height: 100%;
       font-size: 4vw;
@@ -60,7 +75,7 @@
       box-shadow: 0 4px 6px rgba(0,0,0,0.2);
     }
 
-    button:active {
+    button.bgm:active {
       transform: translateY(2px);
       box-shadow: 0 2px 3px rgba(0,0,0,0.2);
     }
@@ -82,7 +97,7 @@
     .row8 button { background: #3F51B5; } /* 濃青 */
     .row9 button { background: #607D8B; } /* グレー */
 
-    button:hover { filter: brightness(1.1); }
+    button.bgm:hover { filter: brightness(1.1); }
   </style>
 </head>
 <body>
@@ -90,7 +105,7 @@
 
   <!-- パスワード入力 -->
   <div id="login">
-    <p>パスワードを入力してください：</p>
+    <p>パスワードを入力してください️😏：</p>
     <input type="password" id="passwordInput">
     <button onclick="checkPassword()">ログイン</button>
   </div>
@@ -98,54 +113,54 @@
   <!-- BGMボタン -->
   <div class="grid" id="buttons">
     <!-- 1行目 001〜004 -->
-    <div class="row1"><button onclick="playSound('001.m4a')">お疲れ</button></div>
-    <div class="row1"><button onclick="playSound('002.m4a')">おかえり</button></div>
-    <div class="row1"><button onclick="playSound('003.m4a')">おやすみ</button></div>
-    <div class="row1"><button onclick="playSound('004.m4a')">なんでだよ</button></div>
+    <div class="row1"><button class="bgm" onclick="playSound('001.m4a')">お疲れ</button></div>
+    <div class="row1"><button class="bgm" onclick="playSound('002.m4a')">おかえり</button></div>
+    <div class="row1"><button class="bgm" onclick="playSound('003.m4a')">おやすみ</button></div>
+    <div class="row1"><button class="bgm" onclick="playSound('004.m4a')">なんでだよ</button></div>
     <!-- 2行目 005〜008 -->
-    <div class="row2"><button onclick="playSound('005.m4a')">寝ろ！</button></div>
-    <div class="row2"><button onclick="playSound('006.m4a')">始まったとこ</button></div>
-    <div class="row2"><button onclick="playSound('007.m4a')">ねぇー！</button></div>
-    <div class="row2"><button onclick="playSound('008.m4a')">何これ！</button></div>
+    <div class="row2"><button class="bgm" onclick="playSound('005.m4a')">寝ろ！</button></div>
+    <div class="row2"><button class="bgm" onclick="playSound('006.m4a')">始まったとこ</button></div>
+    <div class="row2"><button class="bgm" onclick="playSound('007.m4a')">ねぇー！</button></div>
+    <div class="row2"><button class="bgm" onclick="playSound('008.m4a')">何これ！</button></div>
     <!-- 3行目 009〜012 -->
-    <div class="row3"><button onclick="playSound('009.m4a')">エルおめ</button></div>
-    <div class="row3"><button onclick="playSound('010.m4a')">プチおめ</button></div>
-    <div class="row3"><button onclick="playSound('011.m4a')">コアおめ</button></div>
-    <div class="row3"><button onclick="playSound('012.m4a')">エンダー</button></div>
+    <div class="row3"><button class="bgm" onclick="playSound('009.m4a')">エルおめ</button></div>
+    <div class="row3"><button class="bgm" onclick="playSound('010.m4a')">プチおめ</button></div>
+    <div class="row3"><button class="bgm" onclick="playSound('011.m4a')">コアおめ</button></div>
+    <div class="row3"><button class="bgm" onclick="playSound('012.m4a')">エンダー</button></div>
     <!-- 4行目 013〜016 -->
-    <div class="row4"><button onclick="playSound('013.m4a')">尊い</button></div>
-    <div class="row4"><button onclick="playSound('014.m4a')">ナイトに！</button></div>
-    <div class="row4"><button onclick="playSound('015.m4a')">ありがとう</button></div>
-    <div class="row4"><button onclick="playSound('016.m4a')">乾杯</button></div>
+    <div class="row4"><button class="bgm" onclick="playSound('013.m4a')">尊い</button></div>
+    <div class="row4"><button class="bgm" onclick="playSound('014.m4a')">ナイトに！</button></div>
+    <div class="row4"><button class="bgm" onclick="playSound('015.m4a')">ありがとう</button></div>
+    <div class="row4"><button class="bgm" onclick="playSound('016.m4a')">乾杯</button></div>
     <!-- 5行目 017〜020 -->
-    <div class="row5"><button onclick="playSound('017.m4a')">可愛い</button></div>
-    <div class="row5"><button onclick="playSound('018.m4a')">うわぁ</button></div>
-    <div class="row5"><button onclick="playSound('019.m4a')">うおぉ</button></div>
-    <div class="row5"><button onclick="playSound('020.m4a')">ちーん</button></div>
+    <div class="row5"><button class="bgm" onclick="playSound('017.m4a')">可愛い</button></div>
+    <div class="row5"><button class="bgm" onclick="playSound('018.m4a')">うわぁ</button></div>
+    <div class="row5"><button class="bgm" onclick="playSound('019.m4a')">うおぉ</button></div>
+    <div class="row5"><button class="bgm" onclick="playSound('020.m4a')">ちーん</button></div>
     <!-- 6行目 021〜024 -->
-    <div class="row6"><button onclick="playSound('021.m4a')">シンデレラ</button></div>
-    <div class="row6"><button onclick="playSound('022.m4a')">きゅん</button></div>
-    <div class="row6"><button onclick="playSound('023.m4a')">ガオー</button></div>
-    <div class="row6"><button onclick="playSound('024.m4a')">何ですか？</button></div>
+    <div class="row6"><button class="bgm" onclick="playSound('021.m4a')">シンデレラ</button></div>
+    <div class="row6"><button class="bgm" onclick="playSound('022.m4a')">きゅん</button></div>
+    <div class="row6"><button class="bgm" onclick="playSound('023.m4a')">ガオー</button></div>
+    <div class="row6"><button class="bgm" onclick="playSound('024.m4a')">何ですか？</button></div>
     <!-- 7行目 025〜028 -->
-    <div class="row7"><button onclick="playSound('025.m4a')">何したの</button></div>
-    <div class="row7"><button onclick="playSound('026.m4a')">どれ？</button></div>
-    <div class="row7"><button onclick="playSound('027.m4a')">何それ？</button></div>
-    <div class="row7"><button onclick="playSound('028.m4a')">へ？</button></div>
+    <div class="row7"><button class="bgm" onclick="playSound('025.m4a')">何したの</button></div>
+    <div class="row7"><button class="bgm" onclick="playSound('026.m4a')">どれ？</button></div>
+    <div class="row7"><button class="bgm" onclick="playSound('027.m4a')">何それ？</button></div>
+    <div class="row7"><button class="bgm" onclick="playSound('028.m4a')">へ？</button></div>
     <!-- 8行目 029〜032 -->
-    <div class="row8"><button onclick="playSound('029.m4a')">どゆこと？</button></div>
-    <div class="row8"><button onclick="playSound('030.m4a')">怒るよ</button></div>
-    <div class="row8"><button onclick="playSound('031.m4a')">笑</button></div>
-    <div class="row8"><button onclick="playSound('032.m4a')">笑える</button></div>
+    <div class="row8"><button class="bgm" onclick="playSound('029.m4a')">どゆこと？</button></div>
+    <div class="row8"><button class="bgm" onclick="playSound('030.m4a')">怒るよ</button></div>
+    <div class="row8"><button class="bgm" onclick="playSound('031.m4a')">笑</button></div>
+    <div class="row8"><button class="bgm" onclick="playSound('032.m4a')">笑える</button></div>
     <!-- 9行目 033〜036 -->
-    <div class="row9"><button onclick="playSound('033.m4a')">へぇー！</button></div>
-    <div class="row9"><button onclick="playSound('034.m4a')">気をつけな</button></div>
-    <div class="row9"><button onclick="playSound('035.m4a')">おつピカ</button></div>
-    <div class="row9"><button onclick="playSound('036.m4a')">こらピカ</button></div>
+    <div class="row9"><button class="bgm" onclick="playSound('033.m4a')">へぇー！</button></div>
+    <div class="row9"><button class="bgm" onclick="playSound('034.m4a')">気をつけな</button></div>
+    <div class="row9"><button class="bgm" onclick="playSound('035.m4a')">おつピカ</button></div>
+    <div class="row9"><button class="bgm" onclick="playSound('036.m4a')">こらピカ</button></div>
   </div>
 
   <script>
-    const correctPassword = "mina123"; // パスワードをここで設定
+    const correctPassword = "mina317"; // パスワードをここで設定
 
     function checkPassword() {
       const input = document.getElementById('passwordInput').value;
@@ -153,7 +168,7 @@
         document.getElementById('login').style.display = 'none';
         document.getElementById('buttons').style.display = 'grid';
       } else {
-        alert('パスワードが違います💦');
+        alert('パスワードが違います😛');
       }
     }
 
