--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
   <!-- パスワード入力 -->
   <div id="login">
-    <p>パスワードを入力してください️😏：</p>
+    <p>パスワードを入力してね😏：</p>
     <input type="password" id="passwordInput">
     <button onclick="checkPassword()">ログイン</button>
   </div>
@@ -168,7 +168,7 @@
         document.getElementById('login').style.display = 'none';
         document.getElementById('buttons').style.display = 'grid';
       } else {
-        alert('パスワードが違います😛');
+        alert('パスワードが違うよん😛');
       }
     }
 
